force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__ASV__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ASV__c</fullName>
    <description>ASV Amount against the Transaction Line, if applicable (based on Transaction Type).</description>
    <inlineHelpText>ASV Amount against the Transaction Line, if applicable (based on Transaction Type).</inlineHelpText>
    <label>ASV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>