force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__Booking__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Booking__c</fullName>
    <description>Enter Booking Amount.</description>
    <inlineHelpText>Enter Booking Amount.</inlineHelpText>
    <label>Booking</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>