force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__OneTimeRevenue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OneTimeRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>One-time Revenue</description>
    <inlineHelpText>One-time Revenue</inlineHelpText>
    <label>OneTime Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>