force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OrderNumber__c</fullName>
    <description>Order Number, external reference,</description>
    <inlineHelpText>Order Number (may be optionally used as an external reference)</inlineHelpText>
    <label>Order Number</label>
    <referenceTo>JBCXM__TransHeader__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>TransactionLinesOrderNumber</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>