force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__RevRecEndDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevRecEndDate__c</fullName>
    <description>Revenue Recognition End Date - yet to be implemented.</description>
    <inlineHelpText>Revenue Recognition End Date.</inlineHelpText>
    <label>Revenue Recognition End Date</label>
    <type>Date</type>
</CustomField>