force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__RevRecStartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevRecStartDate__c</fullName>
    <description>Revenue Recognition Start Date - yet to be implemented.</description>
    <inlineHelpText>Revenue Recognition Start Date</inlineHelpText>
    <label>Revenue Recurring Start Date</label>
    <type>Date</type>
</CustomField>