force-app/main/default/objects/JBCXM__TransLines__c/fields/JBCXM__Term__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Term__c</fullName>
    <description>Booking term in months.</description>
    <inlineHelpText>Booking term in months.</inlineHelpText>
    <label>Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>